--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Software/jsTDA/DREiMac"]
 	path = Software/jsTDA/DREiMac
 	url = https://github.com/ctralie/DREiMac.git
+[submodule "smokeStack"]
+	path = smokeStack
+	url = https://github.com/ctralie/smokeStack.git
