Adding SOCG 2016 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "PrincetonUGRAD"]
 	path = PrincetonUGRAD
 	url = https://github.com/ctraliedotcom/PrincetonUGRAD.git
+[submodule "Research/SlidingWindowVideo-SOCG2016"]
+	path = Research/SlidingWindowVideo-SOCG2016
+	url = https://github.com/ctraliedotcom/SlidingWindowVideo-SOCG2016.git
