--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "Research/SlidingWindowVideo-SOCG2016"]
 	path = Research/SlidingWindowVideo-SOCG2016
 	url = https://github.com/ctraliedotcom/SlidingWindowVideo-SOCG2016.git
+[submodule "Research/linmdtw"]
+	path = Research/linmdtw
+	url = git@github.com:ctraliedotcom/linmdtw.git
